<resources>
    <string name="app_name">AndroidUIDesignLab2</string>
    <string name="button1">Button 1</string>
    <string name="welcometext">Welcome!</string>
    <string name="question1">Hello, What is your name?</string>
    <string name="resOverviewText">Reservations</string>
    <string name="menuText">Menu</string>
    <string name="settingsText">Settings</string>
    <string name="notifText">Alerts</string>
    <string name="AddRes">+</string>
    <string name="userLogin">\n Email: \n \n \n \n \nPassword:</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="login">Login</string>
    <string name="alerts">No alerts.</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="deleteMessage">DELETE RESERVATION \n ARE YOU SURE?</string>
    <string name="editMessage">EDIT RESERVATION \n ARE YOU SURE?</string>
    <string name="addMessage">ADD RESERVATION \n ARE YOU SURE?</string>
    <string name="settingsEditMessage">CHANGE SETTINGS \n ARE YOU SURE?</string>
    <string name="menu">MENU: Pad Thai - £8 \n \n Cheeseburger - £4.50 \n \nMilkshake - £3 \n \nChocolate Cake - £3
    </string>
    <string name="cheeseburger">Cheeseburger \n £4.50 \n \n Comes with one 1/4lb patty, lettuce, onion and bacon.</string>
    <string name="back">&lt;-</string>
    <string name="settings">Name: W Churchill \n \n Alerts: ON \n \n Vibrate: OFF</string>
    <string name="reservation1">Reservation 1: \nDATE: 20th Dec \nTIME: 13:00  \nSEATS: 4
    </string>
    <string name="reservationAdd">SELECT DATE: \n \nSELECT TIME: \n \nSELECT SEATS:
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="staff_settings">Settings</string>
    <string name="staff_view_reservations">View Reservations</string>
    <string name="staff_manage_reservations">Manage Reservations</string>
    <string name="staff_manage_menu_items">Manage Menu Items</string>
    <string name="menu_item_image">Menu item image</string>
    <string name="menu_item_name_placeholder">Menu item name</string>
    <string name="menu_item_price_placeholder">£0.00</string>

</resources>

