<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonGuestSettings"
        android:layout_width="114dp"
        android:layout_height="111dp"
        android:layout_marginEnd="256dp"
        android:text="@string/settingsText"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuestReservations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />


    <Button
        android:id="@+id/buttonGuestAlerts"
        android:layout_width="114dp"
        android:layout_height="111dp"
        android:layout_marginStart="268dp"
        android:text="@string/notifText"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuestReservations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />


    <Button
        android:id="@+id/buttonGuestReservations"
        android:layout_width="342dp"
        android:layout_height="151dp"
        android:text="@string/resOverviewText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonGuestMenu"
        android:layout_width="342dp"
        android:layout_height="151dp"
        android:text="@string/menuText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGuestReservations" />

</androidx.constraintlayout.widget.ConstraintLayout>
