<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button23"
        android:layout_width="103dp"
        android:layout_height="108dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Edit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button22"
        android:layout_width="388dp"
        android:layout_height="479dp"
        android:background="@drawable/button2"
        android:gravity="top|center_horizontal"
        android:maxLines="10"
        android:paddingTop="16dp"
        android:singleLine="false"
        android:text="@string/settings"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <Button
        android:id="@+id/button24"
        android:layout_width="62dp"
        android:layout_height="68dp"
        android:textSize="34sp"
        android:text="@string/back"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="803dp" />
</androidx.constraintlayout.widget.ConstraintLayout>