<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button27"
        android:layout_width="388dp"
        android:layout_height="479dp"
        android:background="@drawable/button2"
        android:gravity="top|center_horizontal"
        android:maxLines="10"
        android:paddingTop="16dp"
        android:singleLine="false"
        android:text="@string/settingsEditMessage"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <Button
        android:id="@+id/button28"
        android:layout_width="103dp"
        android:layout_height="108dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Edit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button29"
        android:layout_width="363dp"
        android:layout_height="226dp"
        android:layout_marginTop="484dp"
        android:backgroundTint="#E9A655"
        android:text="@string/editMessage"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>