<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <!-- background panel where fields for username and password go  -->
    <View
        android:id="@+id/panelLogin"
        android:layout_width="301dp"
        android:layout_height="444dp"
        android:background="@drawable/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />


    <TextView
        android:id="@+id/textLoginTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/userLogin"
        android:textSize="34sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@id/panelLogin"
        app:layout_constraintStart_toStartOf="@id/panelLogin"
        app:layout_constraintEnd_toEndOf="@id/panelLogin" />

    <!-- enter username  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="@id/panelLogin"
        app:layout_constraintStart_toStartOf="@id/panelLogin"
        app:layout_constraintEnd_toEndOf="@id/panelLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- passwodr -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toBottomOf="@id/inputUsernameLayout"
        app:layout_constraintStart_toStartOf="@id/panelLogin"
        app:layout_constraintEnd_toEndOf="@id/panelLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- login button -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="282dp"
        android:layout_height="103dp"
        android:background="@drawable/button2"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>